--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "sanity": "^3.40.0",
+    "sanity-plugin-media": "^2.2.5",
     "styled-components": "^6.1.8"
   },
   "devDependencies": {
